# foodie

./: .env  .gitignore  README.md  deno.json  docker-compose.yml  dockerfile  dump.sql  go.mod  go.sum  makefile  nx.json  package-lock.json  package.json
apps/client/: .eslintrc.json  project.json
apps/database/: foodie.db
apps/server-e2e/: project.json
backend-js/: .gitignore  README.md  package.json
backend-js/db/: postgres-seed.sql  postgres.sql  seed.sql
backend-js/src/: app.module.ts
backend-py/: README.md  ingredients.json  pyproject.toml
backend-py/src/: main.py
backend-py/src/routers/: base_router.py  ingredients_router.py
backend-py/src/services/: ingredient_service.py
backend-py/src/startup/: auto_register.py  component_registry.py
backend-py/src/startup/containers/: app_container.py
backend-py/src/startup/factories/: router_factory.py  service_factory.py
backend-py/src/startup/providers/: app_context_provider.py
client/: angular.json  package-lock.json  package.json  project.json
cmd/server/: main.go
foodie-client/: README.md  package-lock.json  package.json
foodie-client/src/: index.html
frontend/: README.md  bun.lockb  package.json  vite.config.ts
frontend-angular/src/: index.html  styles.scss
internal/config/: config.go
internal/db/: db.go
internal/httpapi/: handlers.go  middleware.go  router.go
internal/httpx/: respond.go
recipes/raw/: Creamy Peston Chicken.json  Curry Ranch Chicken.json  Meditteranean-style Chicken.json  Pesto Farro Bowl.json  chilli.json  (+1 more)
server/: package-lock.json  package.json
(+112 files in other folders)
