[tool.coverage.run]
branch = true
source = ["src"]

[project]
name = "backend-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.48.3",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "inflection>=0.5.1",
    "requests>=2.32.5",
    "scalar-fastapi>=1.5.0",
    "uvicorn>=0.40.0",
]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
